[tool.poetry]
name = "tennis-interview"
version = "0.1.0"
description = ""
authors = ["zhoufan <1247714429@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
youtube-transcript-api = "^0.6.2"
openai = "^1.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
