[tool.poetry]
name = "tennis-interview"
version = "0.1.0"
description = ""
authors = ["zhoufan <1247714429@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
youtube-transcript-api = "^0.6.2"
openai = "^1.43.1"
python-fasthtml = "^0.5.1"
google-api-python-client = "^2.144.0"
fastapi = "^0.113.0"
markdown = "^3.7"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
